# MyLLM

./: .gitattributes  .gitignore  .gitignore.backup  5.2.SFT_Instruction_Following.ipynb  CLAUDE.md  README.md  gpt2-small-config.json  main.py  pyproject.toml  requirements.txt  vocab.json
Meta_Bot/: README.md
Modules/: .README.md.swp  README.md
Modules/1.data/: README.md
Modules/2.models/: README.md
Modules/3.training/: README.md  train_dist.py
Modules/5.inference/: README.md  gpt_app.py  load_model.py
MyLLM/: README.md  _model.py  api.py  api2.py  config.py  config.yaml  model.py  new.py  play_1.py  play_2.py  play_3.py  pyproject.toml  tempCodeRunnerFile.py  test_config.json  test_config.py  test_model.py
MyLLM/_model/: _model.py
MyLLM/myllm/: __init__.py
MyLLM/myllm/model/: GPT.py  __init__.py  config.py  gpt2.py  llama2.py  llama3.py  model.py  test.py  test_config.json  test_gpt2.py  test_llama2.py  test_llama3.py
MyLLM/tests/: device.py  test_config.py  test_model.py
demos/: 00_install_and_setup.ipynb  01_quickstart.ipynb  02_generation_configs.ipynb  03_tokenizers_and_configs.ipynb  04_sft_training.ipynb  05_new_models.ipynb  _colab_setup.py
docs/: cli.md  extension-guide.md  index.md  testing.md
docs/core/: generation-config.md  gpt-model.md  llm.md  model-config.md
docs/engine/: accelerators.md  callbacks.md  checkpointing.md  trainer-engine.md
docs/getting-started/: installation.md  quickstart.md
docs/tokenizers/: factory.md  gpt2.md  llama2.md  llama3.md  overview.md  trainable.md  wrapper.md
docs/training/: base-trainer.md  dpo-trainer.md  overview.md  ppo-trainer.md  pretrain-trainer.md  sft-trainer.md
docs/training-configs/: dpo-config.md  sft-config.md  trainer-config.md
docs/utils/: model-loader.md  model-registry.md  sampler.md  weight-mappers.md
finetuning/: README.md
finetuning/GPT2_RL_DPO/: data.py  dpo_loss.py  ppo_train.py
myllm/: .coverage  .gitignore  README.md  __init__.py  __main__.py  api.py  api_test.py  api_vs_gen.py  benchmark_api.py  benchmark_gen.py  config.py  gen.py  gen_test.py  generation_benchmark.csv  legacy_api.py  model.py  practice.py  tempCodeRunnerFile.py  test.py  test2.py  test_cache.py
myllm/Assets/: benchmark_results.csv  benchmark_results_20250710_203308.csv  benchmark_results_20250710_203308.json  benchmark_results_20250710_205245.csv  benchmark_results_20250710_205245.json  benchmark_results_20250710_211348.csv  benchmark_results_20250710_211348.json  benchmark_results_20250710_213053.csv  benchmark_results_20250710_213053.json  benchmark_results_20250715_232234.csv  benchmark_results_20250715_232234.json  sample_outputs.txt
myllm/Configs/: GenConfig.py  ModelConfig.py  __init__.py
myllm/Tokenizer/: LLAMA2TOK.py  LLAMA3TOK.py  __init__.py  base.py  factory.py  test_tokenizer.py
myllm/Tokenizers/: __init__.py  base.py  factory.py  future.py  gemma_tokenizer.py  gpt2_tokenizer.py  play.ipynb  test_factory.py  test_tokenizer.py  trainable_tok.py  wrapper.py
myllm/Train/: DPOConfig.py  (+20 more)
notebooks/: 0.0.WELCOME.ipynb  1.1.DATA.ipynb  1.2.Tokenizer.html  1.2.Tokenizer.ipynb  2.1.ATTENTION.ipynb  2.2.More_ATTENTION.ipynb  2.3.GPT.ipynb  2.4.Llama3.ipynb  3.1.TRAIN.ipynb  3.2.Llama3.ipynb  4.2..SFT_Instruction_Following.ipynb  4.3.SFT_PEFT.ipynb  5.1.SFT_Text_Classification.ipynb  5.2.SFT_Instruction_Following.ipynb  6.1.INFERENCE_Text_Generation.ipynb  6.1.RLHF_PPO.ipynb  6.2.DPO.ipynb  6.2.KV_Cache.ipynb  6.2.RL_DPO.ipynb  6.3.Q1.html  6.3.Quantization.ipynb  6.3.Quantization_1.ipynb  6.4.Quantization_2.html  6.4.Quantization_2.ipynb  6_2_DPO.ipynb  7.1.INFERENCE_Text_Generation.ipynb  README.md  train_exp.py
output/: config.yaml  metrics.json  metrics_history.json  training_report.md
sft_output/: metrics.json
wandb/: latest-run
(+463 files in other folders)
