[project]
name = "myllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pytest>=8.4.1",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.1",
]
