[project]
name = "myllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "deepspeed>=0.17.5",
    "gputil>=1.4.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "pytest>=8.4.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tensorflow>=2.20.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.1",
    "wandb>=0.21.4",
]
