[project]
name = "myllm"
version = "0.1.0"
description = "A from-scratch LLM framework: tokenization → attention → training → RLHF → inference"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "silvaxxx1" }]
keywords = ["llm", "transformers", "gpt", "llama", "rlhf", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# ── Core dependencies (always required) ──────────────────────────────────────
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "sentencepiece>=0.1.99",
    "safetensors>=0.4.0",
    "transformers>=4.40.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

# ── Optional dependency groups ────────────────────────────────────────────────
[project.optional-dependencies]
train = [
    "wandb>=0.21.4",
    "accelerate>=1.10.1",
    "deepspeed>=0.17.5",
]
inference = [
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.2",
    "gputil>=1.4.0",
]
dev = [
    "pytest>=8.4.1",
]
all = [
    "myllm[train,inference,dev]",
]

# ── CLI entry point ───────────────────────────────────────────────────────────
[project.scripts]
myllm = "myllm.__main__:main"

[tool.setuptools.packages.find]
include = ["myllm*"]

[tool.pytest.ini_options]
testpaths = ["myllm/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
