[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myllm"
version = "0.1.0"
description = "A minimal, hackable LLM framework for learning and experimentation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "einops>=0.6.0",     # For tensor operations
    "tqdm>=4.65.0",      # For progress bars
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
training = [
    "datasets>=2.12.0",  # For data loading
    "wandb>=0.15.0",     # For experiment tracking
]
quantization = [
    "bitsandbytes>=0.39.0",  # For 4/8-bit quantization
    "accelerate>=0.20.0",    # For device optimization
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
